finishing project card and fixing whitespace

--- a/styles.scss
+++ b/styles.scss
@@ -54,6 +54,7 @@ body {
     "heading heading heading heading"
     "image image image image"
     "p p p p";
+  width: 28rem;
 
   &__heading {
     grid-area: heading;
@@ -85,6 +86,7 @@ body {
 }
 
 .technical-skills {
+  width:28rem;
   margin-top: 3rem;
   margin-bottom: 1.25rem;
   display: grid;
@@ -96,8 +98,7 @@ body {
 
   &__heading {
     grid-area: heading;
-    width: 9.45rem;
-    height: 5rem;
+    height: 3.5rem;
     font-weight: 600;
     font-size: 1.75rem;
     line-height: 39px;
@@ -107,12 +108,11 @@ body {
 
   &__description {
     grid-area: p;
-    width: 20.75rem;
     font-style: normal;
     font-weight: 400;
     font-size: 1rem;
     line-height: 160%;
-    text-align: justify;
+    text-align: center;
   }
 }
 .skills-container {
@@ -122,6 +122,7 @@ body {
   grid-gap: 3rem;
   align-items: center;
   object-fit: scale-down;
+  width: 28rem;
   figure {
     justify-self: center;
   }
@@ -131,6 +132,7 @@ body {
 }
 
 .project-intro{
+  width:28rem;
   margin-top: 3rem;
   margin-bottom: 1.25rem;
   display: grid;
@@ -142,8 +144,7 @@ body {
 
   &__heading{
     grid-area: heading;
-    width: 9.45rem;
-    height: 5rem;
+    height: 3.5rem;
     font-weight: 600;
     font-size: 1.75rem;
     line-height: 39px;
@@ -151,7 +152,6 @@ body {
   }
   &__description{
     grid-area: p;
-    width: 20.75rem;
     font-style: normal;
     font-weight: 400;
     font-size: 1rem;
@@ -160,22 +160,29 @@ body {
   }
 }
 .project-card{
+  border: 2px solid black;
+  width:22rem;
+  height: 34rem;
   margin-top: 3rem;
   margin-bottom: 1.25rem;
+  margin-left: 3rem;
   display:grid;
-  grid-gap: 1.2rem;
+  grid-gap:0.5rem;
+  align-items: center;
   grid-template-areas: 
   "image image image image"
   "type type type type"
   "client client client client"
-  "d d d d"
+  "d d d d "
   "button1 button1 button2 button2";
-
-  &__placeholder{
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  figure{
     grid-area: image;
-    object-fit: scale-down;
+    width:17rem;
+    background-size: contain;
+    overflow: hidden;
+    justify-self: center;
   }
-
   &__project-type-heading{
     grid-area: type;
     font-size: 1.25rem;
@@ -183,15 +190,32 @@ body {
   }
   &__client-project-heading{
     grid-area: client;
+
   }
   &__description{
     grid-area: d;
   }
   &__button--code{
+    font-size: 1rem;
+    font-weight: 600;
+    font-family: "Inter";
+    width:7rem;
+    height:3rem;
     grid-area: button1;
+    background: #FFFFFF;
+    border: 1px solid #000000;
+    border-radius: 7px;
   }
   &__button--preview{
+    font-size: 1rem;
+    font-weight: 600;
+    font-family: "Inter";
+    width:7rem;
+    height:3rem;
     grid-area: button2;
+    background: #FFFFFF;
+    border: 1px solid #000000;
+    border-radius: 7px;
   }
 }
 
